Version 0.04

  Fix nested resource()

Version 0.03

  Add resource() support

Version 0.01

  Initial release